cambio total de diseño en cards

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/apple-iphone-11-pro-max.jpg"
+                  src="img/headphone2.png"
                   alt="IPhone 11 Pro Max"
                 />
               </div>
@@ -88,7 +88,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/apple-iphone-12.jpg"
+                  src="img/headphone2.png"
                   alt="IPhone 12"
                 />
               </div>
@@ -109,7 +109,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/auriculares-sony.jpg"
+                  src="img/headphone2.png"
                   alt="Auriculares Sony"
                 />
               </div>
@@ -130,7 +130,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/camara-canon.jpg"
+                  src="img/headphone2.png"
                   alt="Camara Canon"
                 />
               </div>
@@ -151,7 +151,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/dji-mavic-2-pro.jpg"
+                  src="img/headphone2.png"
                   alt="DJI Mavi 2 Pro"
                 />
               </div>
@@ -172,7 +172,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/modem-motorola.jpg"
+                  src="img/headphone2.png"
                   alt="Modem Motorola"
                 />
               </div>
@@ -194,7 +194,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/lavarropas-dh.jpg"
+                  src="img/headphone2.png"
                   alt="Lavarropas DH"
                 />
               </div>
@@ -216,7 +216,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/samsung-tu7000.jpg"
+                  src="img/headphone2.png"
                   alt="Samsung TU7000"
                 />
               </div>
@@ -238,7 +238,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/notebook-lenovo.jpg"
+                  src="img/headphone2.png"
                   alt="Notebook Lenovo"
                 />
               </div>
@@ -260,7 +260,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/drone-dji.jpg"
+                  src="img/headphone2.png"
                   alt="Drone DJI"
                 />
               </div>
@@ -282,7 +282,7 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/chromecast-google.jpg"
+                  src="img/headphone2.png"
                   alt="Chromecast Google"
                 />
               </div>
