--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Proyecto Integrador</title>
   </head>
 
@@ -67,12 +74,12 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/headphone2.png"
-                  alt="IPhone 11 Pro Max"
+                  src="img/auriculares.png"
+                  alt="Auriculares"
                 />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Celular</h2>
+                <h2 class="card__heading">Auriculares</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -88,12 +95,12 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/headphone2.png"
-                  alt="IPhone 12"
+                  src="img/Smartwatch-Applewebp.png"
+                  alt="SmartWatch"
                 />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Celular</h2>
+                <h2 class="card__heading">Apple Smartwatch</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -109,12 +116,12 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/headphone2.png"
-                  alt="Auriculares Sony"
+                  src="img/bicicleta.png"
+                  alt="bicicleta"
                 />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Ariculares Sony</h2>
+                <h2 class="card__heading">bicicletas</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -130,12 +137,12 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/headphone2.png"
-                  alt="Camara Canon"
+                  src="img/PlayStation5.png"
+                  alt="PlayStation5"
                 />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Camara Canon</h2>
+                <h2 class="card__heading">Play Station 5</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -151,12 +158,12 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/headphone2.png"
-                  alt="DJI Mavi 2 Pro"
+                  src="img/impresora.png"
+                  alt="Impresora"
                 />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Dron</h2>
+                <h2 class="card__heading">Impresoras</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -170,14 +177,28 @@
           <a class="card" href="#">
             <article class="card__article">
               <div class="card__image-container">
-                <img
-                  class="card__image"
-                  src="img/headphone2.png"
-                  alt="Modem Motorola"
-                />
+                <img class="card__image" src="img/monitor.png" alt="Monitor" />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Modem</h2>
+                <h2 class="card__heading">Monitores</h2>
+                <div class="card__description">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Nam obcaecati tempora, ratione facilis totam maiores!
+                  </p>
+                </div>
+              </div>
+            </article>
+          </a>
+          <!-- .card -->
+
+          <a class="card" href="#">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img class="card__image" src="img/Lenovo.png" alt="Lenovo" />
+              </div>
+              <div class="card__content">
+                <h2 class="card__heading">Notebooks</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -194,12 +215,12 @@
               <div class="card__image-container">
                 <img
                   class="card__image"
-                  src="img/headphone2.png"
-                  alt="Lavarropas DH"
+                  src="img/smarthphone.png"
+                  alt="smarthphone"
                 />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Lavarropas</h2>
+                <h2 class="card__heading">Celulares</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -214,14 +235,10 @@
           <a class="card" href="#">
             <article class="card__article">
               <div class="card__image-container">
-                <img
-                  class="card__image"
-                  src="img/headphone2.png"
-                  alt="Samsung TU7000"
-                />
+                <img class="card__image" src="img/pc.png" alt="pc" />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Televisores</h2>
+                <h2 class="card__heading">PCs de Escritorio</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -236,14 +253,10 @@
           <a class="card" href="#">
             <article class="card__article">
               <div class="card__image-container">
-                <img
-                  class="card__image"
-                  src="img/headphone2.png"
-                  alt="Notebook Lenovo"
-                />
+                <img class="card__image" src="img/camara.png" alt="Camaras" />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Notebook</h2>
+                <h2 class="card__heading">Camaras de Seguridad</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -258,36 +271,10 @@
           <a class="card" href="#">
             <article class="card__article">
               <div class="card__image-container">
-                <img
-                  class="card__image"
-                  src="img/headphone2.png"
-                  alt="Drone DJI"
-                />
+                <img class="card__image" src="img/SmartTv.png" alt="SmartTv" />
               </div>
               <div class="card__content">
-                <h2 class="card__heading">Drone</h2>
-                <div class="card__description">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Nam obcaecati tempora, ratione facilis totam maiores!
-                  </p>
-                </div>
-              </div>
-            </article>
-          </a>
-          <!-- .card -->
-
-          <a class="card" href="#">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img
-                  class="card__image"
-                  src="img/headphone2.png"
-                  alt="Chromecast Google"
-                />
-              </div>
-              <div class="card__content">
-                <h2 class="card__heading">Chromecast</h2>
+                <h2 class="card__heading">Smart TVs</h2>
                 <div class="card__description">
                   <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -304,6 +291,70 @@
       <!-- .section-cards -->
     </main>
     <!-- main -->
+
+    <footer>
+      <div class="footer_content">
+        <div class="footer_contacts">
+          <h1>BaireStore</h1>
+          <p>Seguinos en nuestras redes</p>
+          <div class="footer_social_media">
+            <a href="#" class="footer-link" id="instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" class="footer-link" id="facebook">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#" class="footer-link" id="twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+
+        <ul class="footer-list">
+          <li>
+            <h3>Información</h3>
+          </li>
+          <li>
+            <a href="#" class="footer-link">+54 11 1234-5678</a>
+          </li>
+          <li>
+            <a href="#" class="footer-link">info@bairestore.com</a>
+          </li>
+          <li>
+            <a href="#" class="footer-link">Buenos Aires, Argentina</a>
+          </li>
+        </ul>
+        <ul class="footer-list">
+          <li>
+            <h3>Categorias</h3>
+          </li>
+          <li>
+            <a href="#" class="footer-link">Inicio</a>
+          </li>
+          <li>
+            <a href="#" class="footer-link">Contacto</a>
+          </li>
+          <li>
+            <a href="#" class="footer-link">Nosotros</a>
+          </li>
+        </ul>
+        <div class="footer_subscribe">
+          <h3>Suscribite</h3>
+
+          <p>Recibí ofertas y promociones!</p>
+
+          <div class="input_group">
+            <input type="email" id="email" />
+            <button class="input-button">
+              <i class="fa-regular fa-envelope"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="footer_copyright">
+        &copy; 2023 | Ezequiel Arocha | All rights reserved
+      </div>
+    </footer>
 
     <script type="module" src="/main.js"></script>
   </body>
